# visual_saliency_ros

./: .gitmodules  CMakeLists.txt  README.md  package.xml
include/saliency_detection/: cvgabor.h  saliencyDetectionVOCUS2.h  saliency_Hou.h  saliency_Itti.h  saliency_detection.h  saliency_node.h
launch/: saliency_detection.launch  saliency_vocus2.launch
rviz_cfg/: config.rviz
src/saliency_detection/: cvgabor.cpp  saliencyDetectionVOCUS2.cpp  saliency_Hou.cpp  saliency_Itti.cpp  saliency_detection.cpp  saliency_node.cpp
